// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <DiagnosisCreateForm /> should renders correctly when data take from Documents how "import" 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="diagnosesCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="problem"
            label="Problem issue"
            name="problem"
            placeholder=""
            props={
              Object {
                "isSubmit": undefined,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateOfOnset"
            label="Date"
            name="dateOfOnset"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": undefined,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="description"
            label="Description"
            name="description"
            props={
              Object {
                "isSubmit": undefined,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="NHS Choices Web Page URL"
            name="nhsURL"
            placeholder="https://www.nhs.co.uk/Conditions/Hay-fever/Pages"
            props={
              Object {
                "isNotValidate": true,
                "isSubmit": undefined,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology"
            name="terminology"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": undefined,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology Code"
            name="code"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": undefined,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="originalSource"
        label="Import URL"
        name="originalSource"
        props={
          Object {
            "disabled": true,
            "isSubmit": undefined,
          }
        }
      />
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
                "isSubmit": undefined,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="date"
            label="Date"
            name="date"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": undefined,
                "value": 1483228800000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <DiagnosisCreateForm /> should renders correctly when data take from Documents how "import" with Terminology 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="diagnosesCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="problem"
            label="Problem issue"
            name="problem"
            placeholder=""
            props={
              Object {
                "isSubmit": undefined,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateOfOnset"
            label="Date"
            name="dateOfOnset"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": undefined,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="description"
            label="Description"
            name="description"
            props={
              Object {
                "isSubmit": undefined,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="NHS Choices Web Page URL"
            name="nhsURL"
            placeholder="https://www.nhs.co.uk/Conditions/Hay-fever/Pages"
            props={
              Object {
                "isNotValidate": true,
                "isSubmit": undefined,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology"
            name="terminology"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": undefined,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology Code"
            name="code"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": undefined,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="originalSource"
        label="Import URL"
        name="originalSource"
        props={
          Object {
            "disabled": true,
            "isSubmit": undefined,
          }
        }
      />
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
                "isSubmit": undefined,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="date"
            label="Date"
            name="date"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": undefined,
                "value": 1483228800000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <DiagnosisCreateForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="diagnosesCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="problem"
            label="Problem issue"
            name="problem"
            placeholder=""
            props={
              Object {
                "isSubmit": true,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateOfOnset"
            label="Date"
            name="dateOfOnset"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="description"
            label="Description"
            name="description"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="NHS Choices Web Page URL"
            name="nhsURL"
            placeholder="https://www.nhs.co.uk/Conditions/Hay-fever/Pages"
            props={
              Object {
                "isNotValidate": true,
                "isSubmit": true,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology"
            name="terminology"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology Code"
            name="code"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="date"
            label="Date"
            name="date"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": true,
                "value": 1483228800000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <DiagnosisCreateForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="diagnosesCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="problem"
            label="Problem issue"
            name="problem"
            placeholder=""
            props={
              Object {
                "isSubmit": false,
              }
            }
            type="text"
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateOfOnset"
            label="Date"
            name="dateOfOnset"
            props={
              Object {
                "format": "DD-MMM-YYYY",
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="description"
            label="Description"
            name="description"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="NHS Choices Web Page URL"
            name="nhsURL"
            placeholder="https://www.nhs.co.uk/Conditions/Hay-fever/Pages"
            props={
              Object {
                "isNotValidate": true,
                "isSubmit": false,
              }
            }
            type="text"
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology"
            name="terminology"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            label="Terminology Code"
            name="code"
            props={
              Object {
                "className": "non-edit-value",
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="date"
            label="Date"
            name="date"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": false,
                "value": 1483228800000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
